feat: revamp slides detail page tabs and components

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-template-selection/template.html.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-template-selection/template.html.twig
@@ -5,6 +5,7 @@
             :placeholder="$tc('blurElysiumSlides.slideSettings.slideTemplate.placeholder')"
             :options="defaultSlideTemplates"
             :value="value"
+            :disabled="disabled"
             @change="onChange">
             <option 
                 v-for="template in defaultSlideTemplates" 
