--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-list/blur-elysium-slides-list.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-list/blur-elysium-slides-list.twig
@@ -69,15 +69,14 @@
                 <div class="sw-customer-list__content">
 
                     {% block blur_elysium_slides_list_view_grid %}
-                        <template v-if="blur_elysium_slides !== null && blur_elysium_slides.length > 0">
+                        <template v-if="slides !== null && slides.length > 0">
 
                             <sw-entity-listing
-                                v-if="blur_elysium_slides"
                                 class="sw-customer-list-grid"
                                 identifier="blur-elysium-slides-list"
-                                :items="blur_elysium_slides"
+                                :items="slides "
                                 :columns="elysiumSlidesColumns"
-                                :repository="elysiumSlidesRepository"
+                                :repository="repository"
                                 :sort-by="sortBy"
                                 :sort-direction="sortDirection"
                                 detail-route="blur.elysium.slides.index"
@@ -85,7 +84,6 @@
                                 :allow-inline-edit="acl.can('blur_elysium_slides.editor')"
                                 :is-loading="isLoading"
                                 :disable-data-fetching="true"
-                                @selection-change="updateSelection"
                                 @inline-edit-save="onInlineEditSave"
                                 @page-change="onPageChange" 
                                 @column-sort="onSortColumn" 
@@ -104,9 +102,17 @@
                                         </sw-context-menu-item>
                                     {% endblock %}
 
+                                    {% block blur_elysium_slides_list_action_copy_slide %}
+                                    <sw-context-menu-item
+                                        :disabled="!acl.can('blur_elysium_slides.creator')"
+                                        @click="onCopySlide(item)"
+                                    >
+                                        {{ $tc('sw-product.list.buttonDuplicate') }}
+                                    </sw-context-menu-item>
+                                    {% endblock %}
+
                                     {% block blur_elysium_slides_list_view_grid_action_delete %}
                                         <sw-context-menu-item
-                                            class="sw-customer-list__delete-action"
                                             variant="danger"
                                             :disabled="!acl.can('blur_elysium_slides.deleter')"
                                             @click="onDelete(item.id)"
@@ -118,45 +124,16 @@
 
                                 <template #action-modals="{ item }">
 
-                                    {% block blur_elysium_slides_list_view_modal_delete %}
-                                        <sw-modal
-                                            v-if="showDeleteModal === item.id"
-                                            :title="$tc('global.default.warning')"
-                                            variant="small"
-                                            @modal-close="onCloseDeleteModal"
-                                        >
+                                    <blur-elysium-slide-modal-delete
+                                        v-if="showDeleteModal === item.id"
+                                        :slide-id="item.id" 
+                                        @modal-close="showDeleteModal = false" 
+                                        @delete-finish="onDeleteFinish">
 
-                                            {% block blur_elysium_slides_list_view_modal_delete_text %}
-                                                <p class="sw-customer-list__confirm-delete-text">
-                                                    {{ $tc('sw-customer.list.textDeleteConfirm', 0, { name: `${item.firstName} ${item.lastName}` }) }}
-                                                </p>
-                                            {% endblock %}
-
-                                            {% block blur_elysium_slides_list_view_modal_delete_footer %}
-                                                <template #modal-footer>
-
-                                                    {% block blur_elysium_slides_list_view_modal_delete_action_cancel %}
-                                                        <sw-button
-                                                            size="small"
-                                                            @click="onCloseDeleteModal"
-                                                        >
-                                                            {{ $tc('sw-customer.list.buttonCancel') }}
-                                                        </sw-button>
-                                                    {% endblock %}
-
-                                                    {% block blur_elysium_slides_list_view_modal_delete_action_delete %}
-                                                        <sw-button
-                                                            variant="danger"
-                                                            size="small"
-                                                            @click="onConfirmDelete(item.id)"
-                                                        >
-                                                            {{ $tc('sw-customer.list.buttonDelete') }}
-                                                        </sw-button>
-                                                    {% endblock %}
-                                                </template>
-                                            {% endblock %}
-                                        </sw-modal>
-                                    {% endblock %}
+                                        <template #content>
+                                            <span v-html="$t('blurElysiumSlides.messages.deleteNamedSlideConfirmDialogue', {name: item.name} )" />
+                                        </template>
+                                    </blur-elysium-slide-modal-delete>
                                 </template>
 
                                 {% block blur_elysium_slides_list_view_pagination %}
